--- a/kernel-modules/src/Kbuild
+++ b/kernel-modules/src/Kbuild
@@ -1,17 +1,12 @@
-DTC?=dtc
-KDIR?=/lib/modules/$(shell uname -r)/build
+obj-m += matrixio-core.o
+obj-m += matrixio-uart.o
+obj-m += matrixio-everloop.o
+obj-m += matrixio-codec.o
+obj-m += matrixio-mic.o
+obj-m += matrixio-playback.o
+obj-m += matrixio-gpio.o
+obj-m += matrixio-env.o
+obj-m += matrixio-imu.o
+obj-m += matrixio-regmap.o
 
-all: matrixio.dtbo
-	$(MAKE) -C $(KDIR) M=$(CURDIR) modules
-
-matrixio.dtbo: matrixio.dts
-	$(DTC) -W no-unit_address_vs_reg -@ -I dts -O dtb -o matrixio.dtbo matrixio.dts
-
-install: matrixio.dtbo
-	$(MAKE) -C $(KDIR) M=$(CURDIR) modules_install
-	depmod -A
-	cp matrixio.dtbo /boot/overlays
-
-clean:
-	$(MAKE) -C $(KDIR) M=$(CURDIR) clean
-	rm -f matrixio.dtbo
+ccflags-y := -Wno-missing-attributes
